[package]
name = "learn-async-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "*"
anyhow = "1"
hyper = { version = "0.14", default-features = false, features = [
    "stream",
    "http2",
    "client",
    "runtime",
] }
tokio = { version = "1", features = ["full"] }
